modules/webserver_security_group/webserver_security_group.tf
resource "aws_security_group" "webserver_security_group" {
    name        = "tutorial-securitygroup"
    description = "Tutorial Security Group"
    vpc_id      = var.vpc_id
    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }
    ingress {
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }
    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}
